--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "proyecto_finalweb2024",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "start": "nodemon src/index.js"
   },
   "keywords": [],
   "author": "",
@@ -19,3 +19,5 @@
     "nodemon": "^3.1.3"
   }
 }
+
+
